# sdlarch

./: .gitignore  CMakeLists.txt  Makefile  README.md  __init__.py  pcsx2-from-env.ipynb  pcsx2-video.ipynb  pcsx2.ipynb  ps2.py  sdlarch.cpp  setup.py  state.ipynb  trainning.ipynb
sdlarch_rl/: __init__.py  pcsx2_core.py  sdlenv.py
sdlarch_rl.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdlarch_rl/cores/ps2/: pcsx2.json
sdlarch_rl/roms/GranTurismo3-Ps2/: meta.json  reward.py
sdlarch_rl/utils/: discretizer.py  utils.py
